<resources>
    <string name="app_name">Covid-journal</string>
    <string name="title_activity_form">FormActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_poll">PollActivity</string>
    <string name="imate_li_ote_ano_disanje_ili_kratko_u_daha">Imate li otežano disanje ili kratkoću daha?</string>
    <string name="povratak_nazad">Povratak nazad</string>
    <string name="unesi">Unesi</string>
    <string name="imate_li_bolove_u_tijelu">Imate li bolove u tijelu?</string>
    <string name="osje_ate_li_se_iscrpljeno">Osjećate li se iscrpljeno?</string>
    <string name="boli_li_vas_grlo">Boli li vas grlo?</string>
    <string name="imate_li_glavobolju">Imate li glavobolju?</string>
    <string name="imate_li_za_epljeni_nos_curenje_iz_nosa">Imate li začepljeni nos/curenje iz nosa?</string>
    <string name="imate_li_ka_alj">Imate li kašalj?</string>
    <string name="kolika_vam_je_temperatura">Kolika vam je temperatura?</string>
    <string name="jeste_li_izgubili_osjet_njuha_ili_okusa">Jeste li izgubili osjet njuha ili okusa?</string>
    <string name="imate_li_bol_u_prsima">Imate li bol u prsima?</string>
    <string name="imate_li_gubitak_govora_ili_kretanja">Imate li gubitak govora ili kretanja?</string>
    <string name="osje_ate_li_mu_ninu">Osjećate li mučninu?</string>
    <string name="da">Da</string>
    <string name="ne">Ne</string>
    <string name="_1_dan">1. dan</string>
    <string name="_2_dan">2. dan</string>
    <string name="_3_dan">3. dan</string>
    <string name="_4_dan">4. dan</string>
    <string name="_5_dan">5. dan</string>
    <string name="_6_dan">6.dan</string>
    <string name="_7_dan">7.dan</string>
    <string name="_8_dan">8. dan</string>
    <string name="_9_dan">9. dan</string>
    <string name="_10_dan">10. dan</string>
    <string name="rezultati">Rezultati</string>
    <string name="odjavi_se">Odjavi se</string>
    <string name="profil">Profil</string>
    <string name="create_new_account">Create new account</string>
    <string name="register">Register</string>
    <string name="go_back">Go back</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="todo">TODO</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="natrag">Natrag</string>
    <string name="gubitak_govora_nkretanja">Gubitak govora/\nkretanja:</string>
    <string name="m">M</string>
    <string name="female">Ž</string>
    <string name="ostalo">Ostalo</string>
    <string name="transplant_organa">Transplant organa</string>
    <string name="dijabetes">Dijabetes</string>
    <string name="rak">Rak</string>
    <string name="kardiovaskularne_bolesti">Kardiovaskularne bolesti</string>
    <string name="povijest_bolesti">Povijest bolesti</string>
    <string name="submit">Submit</string>
    <string name="ime_i_prezime">Ime i prezime</string>
    <string name="hiv">HIV</string>
    <string name="bolesti_plu_a_i_di_nih_puteva">Bolesti pluća i dišnih puteva</string>
    <string name="kroni_na_bolest_jetre">Kronična bolest jetre</string>
    <string name="slabi_imunosni_sustav">Slabi imunosni sustav</string>
    <string name="kroni_na_bolest_bubrega">Kronična bolest bubrega</string>
    <string name="spol">Spol</string>
    <string name="jeste_li_pu_a">Jeste li pušač?</string>
    <string name="jeste_li_trudni">Jeste li trudni?</string>
    <string name="down_sindrom">Down sindrom</string>
    <string name="jeste_li_cijepljeni">Jeste li cijepljeni?</string>
    <string name="je_li_va_e_zanimanje_visokorizi_no_skrb_za_starije_osobe_rad_u_zdravstvu_vojska_izlo_enost_ljudima">Je li vaše zanimanje visokorizično? (Skrb za starije osobe, rad u zdravstvu, vojska, izloženost ljudima...)</string>
    <string name="dob">Dob</string>
    <string name="bolovi_u_tijelu">Bolovi u tijelu:</string>
    <string name="za_epljeni_nos_n_curenje_iz_nosa">Začepljeni nos\n/curenje iz nosa:</string>
    <string name="mu_nina">Mučnina:</string>
    <string name="gubitak_osjeta_njuha_n_okusa">Gubitak osjeta njuha\n/okusa:</string>
    <string name="iscrpljenost">Iscrpljenost:</string>
    <string name="ote_ano_disanje_n_kratko_a_daha">Otežano disanje\n/kratkoća daha:</string>
    <string name="bol_u_prsima">Bol u prsima:</string>
    <string name="bol_u_grlu">Bol u grlu:</string>
    <string name="glavobolja">Glavobolja:</string>
    <string name="temperatura">Temperatura:</string>
    <string name="ka_alj">Kašalj:</string>
    <string name="preporuke">Preporuke:</string>
    <string name="cijepljenost">Cijepljenost:</string>
    <string name="dob_">Dob:</string>
    <string name="ime">Ime:</string>
    <string name="bolesti">Bolesti:</string>
    <string name="spol_">Spol:</string>
</resources>